Agregue puntos finales a los parrafos del inicio

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                         <img src="./img/the-witcher-3.jpg" class="card-img-top" alt="imagethewitcher" class="tamaño--imagen">
                                         <div class="card--body">
                                             <h5 class="card--title">The witcher 3</h5>
-                                            <p class="card--text">Si deseas puedes ver el trailer aquí</p>
+                                            <p class="card--text">Si deseas puedes ver el trailer aquí.</p>
                                             <button class="button--modificado"><a href="https://www.youtube.com/watch?v=c0i88t0Kacs">Ver Trailer</a></button>
                                         </div>
                                     </div>
@@ -100,7 +100,7 @@
                                     <img src="./img/ragnarok.jpg" class="card-img-top" alt="imageragnarok">
                                     <div class="card--body">
                                         <h5 class="card--title">god of war Ragnarok</h5>
-                                        <p class="card--text">Si deseas puedes ver el trailer aquí</p>
+                                        <p class="card--text">Si deseas puedes ver el trailer aquí.</p>
                                         <button class="button--modificado"><a href="https://www.youtube.com/watch?v=7RjdHsTcrsE&t=2s">Ver Trailer</a></button>
                                     </div>
                                 </div>
@@ -112,7 +112,7 @@
                                     <img src="./img/Resident-Evil-Village-RE8.jpg" class="card-img-top" alt="imagenresident">
                                     <div class="card--body">
                                         <h5 class="card--title">Resident Evil 8</h5>
-                                        <p class="card--text">Si deseas puedes ver el trailer aquí</p>
+                                        <p class="card--text">Si deseas puedes ver el trailer aquí.</p>
                                         <button class="button--modificado"><a href="https://www.youtube.com/watch?v=JSapXD9vxYA">Ver Trailer</a></button>
                                     </div>
                                 </div>
@@ -124,7 +124,7 @@
                                     <img src="./img/rush.jpg" class="card-img-top" alt="imagenrush">
                                     <div class="card--body">
                                         <h5 class="card--title">Rust</h5>
-                                        <p class="card--text">Si deseas puedes ver el trailer aquí</p>
+                                        <p class="card--text">Si deseas puedes ver el trailer aquí.</p>
                                         <button class="button--modificado"><a href="https://www.youtube.com/watch?v=gcvDUxdmntw">Ver Trailer</a></button>
                                     </div>
                                 </div>
@@ -136,7 +136,7 @@
                                     <img src="./img/returnal.jpg" class="card-img-top" alt="imagenresident">
                                     <div class="card--body">
                                         <h5 class="card--title">Returnal</h5>
-                                        <p class="card--text">Si deseas puedes ver el trailer aquí</p>
+                                        <p class="card--text">Si deseas puedes ver el trailer aquí.</p>
                                         <button class="button--modificado"><a href="https://www.youtube.com/watch?v=lL2Qa0MQyuE">Ver Trailer</a></button>
                                     </div>
                                 </div>
@@ -148,7 +148,7 @@
                                     <img src="./img/Ratchet-Clank.jpg" class="card-img-top" alt="imagenrush">
                                     <div class="card--body">
                                         <h5 class="card--title">Ratchet-Clank</h5>
-                                        <p class="card--text">Si deseas puedes ver el trailer aquí</p>
+                                        <p class="card--text">Si deseas puedes ver el trailer aquí.</p>
                                         <button class="button--modificado"><a href="https://www.youtube.com/watch?v=9p_gg9UW9k4">Ver Trailer</a></button>
                                     </div>
                                 </div>
