--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="col mb-4">
                                 <div data-aos="fade-down-right">
                                     <div class="cart">
-                                        <img src="./img/the-Witcher-3.jpg" class="card-img-top" alt="imagethewitcher" class="tamaño--imagen">
+                                        <img src="./img/the-witcher-3.jpg" class="card-img-top" alt="imagethewitcher" class="tamaño--imagen">
                                         <div class="card--body">
                                             <h5 class="card--title">The witcher 3</h5>
                                             <p class="card--text">Si deseas puedes ver el trailer aquí</p>
@@ -231,7 +231,7 @@
     <br>
     
     <!-- Footer -->
-    <footer  class="footerIndex" class="page-footer font-small special-color-dark pt-4">
+    <footer class="footerIndex" class="page-footer font-small special-color-dark pt-4">
         <!-- Footer Elements -->
         <div class="container">
             <div class="row">
